# cafezinho

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: commands.rs
src/database/: db_utils.rs
src/file_io/: file_utils.rs
src/models/: models.rs
